[tool.poetry]
name = "wagtail-svg-images"
version = "0.1.7"
description = "Workaround to support SVG as Images in Wagtail"
authors = ["Ramiro A Alvarez U <liko28s@gmail.com>"]
license = "MIT"
packages = [
    { include = "wagtail_svg_images" },
]

[tool.poetry.dependencies]
python = "^3.8"
wagtail-instance-selector = "^2.1.1"
wagtail = "^2.14.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
