[tool.poetry]
name = "wagtail-svg-images"
version = "0.1.22"
description = "Workaround to support SVG as Images in Wagtail"
authors = ["Ramiro A Alvarez U <liko28s@gmail.com>"]
license = "MIT"
packages = [
    { include = "wagtail_svg_images" },
]

[tool.poetry.dependencies]
python = "^3.8"
wagtail = "^3.0"
wagtailsvg = "^0.0.33"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
